// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Google Authenticator Enroll Transformer Tests should add Stepper layout to UI Schema elements when GA Enroll params exists in Idx response 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.enroll.google_authenticator.setup.title",
        },
        "type": "Title",
      },
      {
        "elements": [
          {
            "elements": [
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.google_authenticator.scanBarcode.title",
                  "dataSe": "barcode-setup-title",
                  "level": 2,
                  "visualLevel": 5,
                },
                "type": "Heading",
                "viewIndex": 0,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.google_authenticator.scanBarcode.description",
                  "dataSe": "google-authenticator-setup-info",
                },
                "type": "Description",
                "viewIndex": 0,
              },
              {
                "options": {
                  "data": "#mockhref",
                },
                "type": "QRCode",
                "viewIndex": 0,
              },
              {
                "label": "oie.enroll.google_authenticator.scanBarcode.cannotScan",
                "options": {
                  "nextStepIndex": 1,
                  "type": "button",
                  "variant": "secondary",
                },
                "type": "StepperButton",
                "viewIndex": 0,
              },
              {
                "label": "oform.next",
                "options": {
                  "nextStepIndex": 2,
                  "type": "button",
                  "variant": "primary",
                },
                "type": "StepperButton",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.google_authenticator.cannotScanBarcode.title",
                  "dataSe": "manual-setup-title",
                  "level": 2,
                  "visualLevel": 5,
                },
                "type": "Heading",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.google_authenticator.manualSetupInstructions",
                  "dataSe": "google-authenticator-setup-info",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "noTranslate": true,
                "options": {
                  "content": "A B C 1 2 3 D E F 4 5 6",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "label": "oform.next",
                "options": {
                  "nextStepIndex": 2,
                  "type": "button",
                  "variant": "primary",
                },
                "type": "StepperButton",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.google_authenticator.enterCode.title",
                  "dataSe": "enter-code-title",
                },
                "type": "Description",
                "viewIndex": 2,
              },
              {
                "options": {
                  "inputMeta": {
                    "name": "credentials.passcode",
                  },
                },
                "type": "Field",
                "viewIndex": 2,
              },
              {
                "label": "oform.verify",
                "options": {
                  "step": "enroll-authenticator",
                  "type": "submit",
                },
                "type": "Button",
                "viewIndex": 2,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Google Authenticator Enroll Transformer Tests should add Stepper layout to UI Schema elements when GA Reset params exists in Idx response 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.enroll.google_authenticator.setup.title",
        },
        "type": "Title",
      },
      {
        "elements": [
          {
            "elements": [
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.google_authenticator.scanBarcode.title",
                  "dataSe": "barcode-setup-title",
                  "level": 2,
                  "visualLevel": 5,
                },
                "type": "Heading",
                "viewIndex": 0,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.google_authenticator.scanBarcode.description",
                  "dataSe": "google-authenticator-setup-info",
                },
                "type": "Description",
                "viewIndex": 0,
              },
              {
                "options": {
                  "data": "#mockhref",
                },
                "type": "QRCode",
                "viewIndex": 0,
              },
              {
                "label": "oie.enroll.google_authenticator.scanBarcode.cannotScan",
                "options": {
                  "nextStepIndex": 1,
                  "type": "button",
                  "variant": "secondary",
                },
                "type": "StepperButton",
                "viewIndex": 0,
              },
              {
                "label": "oform.next",
                "options": {
                  "nextStepIndex": 2,
                  "type": "button",
                  "variant": "primary",
                },
                "type": "StepperButton",
                "viewIndex": 0,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "contentType": "subtitle",
                "noMargin": true,
                "options": {
                  "content": "oie.enroll.google_authenticator.cannotScanBarcode.title",
                  "dataSe": "manual-setup-title",
                  "level": 2,
                  "visualLevel": 5,
                },
                "type": "Heading",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.google_authenticator.manualSetupInstructions",
                  "dataSe": "google-authenticator-setup-info",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "contentType": "subtitle",
                "noTranslate": true,
                "options": {
                  "content": "A B C 1 2 3 D E F 4 5 6",
                },
                "type": "Description",
                "viewIndex": 1,
              },
              {
                "label": "oform.next",
                "options": {
                  "nextStepIndex": 2,
                  "type": "button",
                  "variant": "primary",
                },
                "type": "StepperButton",
                "viewIndex": 1,
              },
            ],
            "type": "VerticalLayout",
          },
          {
            "elements": [
              {
                "contentType": "subtitle",
                "options": {
                  "content": "oie.enroll.google_authenticator.enterCode.title",
                  "dataSe": "enter-code-title",
                },
                "type": "Description",
                "viewIndex": 2,
              },
              {
                "options": {
                  "inputMeta": {
                    "name": "credentials.passcode",
                  },
                },
                "type": "Field",
                "viewIndex": 2,
              },
              {
                "label": "oform.verify",
                "options": {
                  "step": "reset-authenticator",
                  "type": "submit",
                },
                "type": "Button",
                "viewIndex": 2,
              },
            ],
            "type": "VerticalLayout",
          },
        ],
        "type": "Stepper",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
